--- a/src/com/barman/views/login.fxml
+++ b/src/com/barman/views/login.fxml
@@ -6,31 +6,47 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="parent" stylesheets="@../css/login.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.barman.controllers.AdminLogin">
    <children>
+      <Label alignment="CENTER" layoutX="60.0" layoutY="60.0" prefHeight="17.0" prefWidth="496.0" styleClass="headerText" text="School Management System">
+         <VBox.margin>
+            <Insets bottom="20.0" top="-20.0" />
+         </VBox.margin>
+      </Label>
       <Label text="Login">
          <VBox.margin>
             <Insets bottom="5.0" />
          </VBox.margin>
       </Label>
-      <TextField>
+      <TextField fx:id="username" onKeyReleased="#handleKeyReleased" promptText="Name here" styleClass="input-field">
          <VBox.margin>
-            <Insets bottom="20.0" />
+            <Insets />
          </VBox.margin>
       </TextField>
+      <Label fx:id="usernameErrorMessage" styleClass="error-message">
+         <VBox.margin>
+            <Insets bottom="10.0" />
+         </VBox.margin></Label>
       <Label layoutX="10.0" layoutY="10.0" text="Password">
          <padding>
             <Insets bottom="5.0" />
          </padding>
       </Label>
-      <PasswordField>
+      <PasswordField fx:id="password" onKeyReleased="#handleKeyReleased" promptText="First Name" styleClass="input-field">
          <VBox.margin>
-            <Insets bottom="20.0" />
+            <Insets />
          </VBox.margin>
       </PasswordField>
-      <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="509.0" text="Login" />
+      <Label fx:id="passwordErrorMessage" styleClass="error-message">
+         <VBox.margin>
+            <Insets bottom="10.0" />
+         </VBox.margin></Label>
+      <Button fx:id="adminLoginButton" mnemonicParsing="false" onAction="#handleLogin" prefHeight="25.0" prefWidth="509.0" text="Login">
+         <font>
+            <Font name="Lucida Bright" size="12.0" />
+         </font></Button>
    </children>
    <opaqueInsets>
       <Insets />
