--- a/src/com/barman/views/adminDashboard.fxml
+++ b/src/com/barman/views/adminDashboard.fxml
@@ -1,10 +1,82 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.barman.controllers.AdminDashboard">
-   <children>
-      <Label layoutX="128.0" layoutY="70.0" prefHeight="75.0" prefWidth="279.0" text="ADMIN DASHBOARD" />
-   </children>
-</AnchorPane>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <top>
+      <HBox spacing="30.0" style="-fx-background-color: yellow;" BorderPane.alignment="CENTER">
+         <children>
+            <ImageView fitHeight="59.0" fitWidth="109.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
+               <image>
+                  <Image url="@../img/logo.PNG" />
+               </image>
+            </ImageView>
+            <Label maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="17.0" prefWidth="436.0" text="School Name Here" HBox.hgrow="ALWAYS" />
+            <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" text="Logout" HBox.hgrow="ALWAYS" />
+         </children>
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin>
+      </HBox>
+   </top>
+   <center>
+      <VBox prefHeight="319.0" prefWidth="640.0" BorderPane.alignment="CENTER">
+         <children>
+            <HBox prefHeight="57.0" prefWidth="635.0">
+               <children>
+                  <Label prefHeight="17.0" prefWidth="216.0" text="Welcome Chima Stella" HBox.hgrow="ALWAYS" />
+                  <Label prefHeight="17.0" prefWidth="183.0" text="January 31st, 2019." HBox.hgrow="ALWAYS" />
+               </children>
+               <VBox.margin>
+                  <Insets bottom="30.0" />
+               </VBox.margin>
+               <padding>
+                  <Insets bottom="20.0" top="20.0" />
+               </padding>
+            </HBox>
+            <Separator prefWidth="200.0" />
+            <HBox spacing="10.0">
+               <children>
+                  <TextField prefWidth="200.0" promptText="Find Someone..." HBox.hgrow="ALWAYS" />
+                  <Label prefHeight="17.0" prefWidth="84.0" text="Find by:" />
+                  <ChoiceBox prefWidth="200.0" HBox.hgrow="ALWAYS" />
+                  <Button defaultButton="true" prefHeight="25.0" prefWidth="228.0" text="_Find Student" HBox.hgrow="ALWAYS" />
+               </children>
+               <VBox.margin>
+                  <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
+               </VBox.margin>
+            </HBox>
+            <Separator prefWidth="200.0" />
+            <HBox fillHeight="false" prefHeight="185.0" prefWidth="640.0">
+               <children>
+                  <Label prefHeight="175.0" prefWidth="360.0" text="Number of Students" HBox.hgrow="ALWAYS" />
+                  <Label prefHeight="177.0" prefWidth="320.0" text="Number of Professors" HBox.hgrow="ALWAYS" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+   </center>
+   <bottom>
+      <ButtonBar prefHeight="72.0" prefWidth="640.0" BorderPane.alignment="CENTER">
+        <buttons>
+            <Button prefWidth="250.0" text="_View Students" wrapText="true" ButtonBar.buttonData="LEFT" />
+            <Button cancelButton="true" prefWidth="250.0" text="E_xit" />
+          <Button minWidth="50.0" prefHeight="25.0" prefWidth="250.0" text="_Add Student" ButtonBar.buttonData="RIGHT" />
+        </buttons>
+         <padding>
+            <Insets left="40.0" right="40.0" />
+         </padding>
+      </ButtonBar>
+   </bottom>
+</BorderPane>
