--- a/src/com/barman/views/studentList.fxml
+++ b/src/com/barman/views/studentList.fxml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -14,7 +18,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.barman.controllers.StudentList">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="740.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.barman.controllers.StudentList">
    <top>
       <HBox spacing="30.0" style="-fx-background-color: yellow;" BorderPane.alignment="CENTER">
          <children>
@@ -34,32 +38,64 @@
    <center>
       <VBox prefHeight="612.0" prefWidth="1280.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox prefHeight="57.0" prefWidth="635.0">
+            <HBox alignment="CENTER" prefWidth="635.0">
                <children>
-                  <Label fx:id="adminName" prefHeight="17.0" prefWidth="352.0" HBox.hgrow="ALWAYS" />
-                  <Label fx:id="date" prefHeight="17.0" prefWidth="183.0" text="January 31st, 2019." HBox.hgrow="ALWAYS" />
+                  <Label fx:id="adminName" alignment="CENTER" prefHeight="17.0" prefWidth="576.0" text="Welcome" HBox.hgrow="ALWAYS" />
+                  <Label fx:id="date" alignment="CENTER" prefHeight="17.0" prefWidth="917.0" text="January 31st, 2019." HBox.hgrow="ALWAYS" />
                </children>
                <VBox.margin>
-                  <Insets bottom="30.0" />
+                  <Insets />
                </VBox.margin>
                <padding>
                   <Insets bottom="20.0" top="20.0" />
                </padding>
             </HBox>
-            <Label alignment="CENTER" prefHeight="95.0" prefWidth="1280.0" text="Student List" VBox.vgrow="ALWAYS">
+            <Label alignment="CENTER" prefWidth="1280.0" text="Student List" VBox.vgrow="ALWAYS">
                <font>
                   <Font size="36.0" />
                </font>
             </Label>
-            <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="371.0" prefViewportHeight="400.0" prefWidth="1309.0" VBox.vgrow="ALWAYS">
+            <HBox alignment="CENTER" spacing="40.0">
+               <children>
+                  <Label alignment="CENTER" prefHeight="17.0" prefWidth="209.0" text="Find Student" />
+                  <TextField prefWidth="250.0" promptText="Search by..." />
+                   <ComboBox prefWidth="200.0" value="Registration Number">
+                       <items>
+                           <FXCollections fx:factory="observableArrayList">
+                               <String fx:value="Registration Number" />
+                               <String fx:value="Name" />
+                               <String fx:value="First Name" />
+                               <String fx:value="Date of Birth" />
+                           </FXCollections>
+                       </items>
+                   </ComboBox>
+                   <ComboBox prefWidth="200.0" value="None Selected">
+                       <items>
+                           <FXCollections fx:factory="observableArrayList">
+                               <String fx:value="None" />
+                               <String fx:value="Module" />
+                               <String fx:value="Specialty" />
+                           </FXCollections>
+                       </items>
+                   </ComboBox>
+                  <Button mnemonicParsing="false" prefWidth="100.0" text="Find Student" />
+               </children>
+               <padding>
+                  <Insets bottom="30.0" top="30.0" />
+               </padding>
+            </HBox>
+            <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="353.0" prefViewportHeight="400.0" prefWidth="1314.0" VBox.vgrow="ALWAYS">
                <content>
-                  <TableView fx:id="studentTable" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="415.0" prefWidth="1400.0">
+                  <TableView fx:id="studentTable" editable="true" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="408.0" prefWidth="1278.0">
                     <columns>
+                        <TableColumn fx:id="registrationNumber" minWidth="-1.0" prefWidth="200.0" text="Registration Number" />
                         <TableColumn fx:id="name" minWidth="-1.0" prefWidth="350.0" text="Name" />
                         <TableColumn fx:id="firstName" minWidth="-1.0" prefWidth="350.0" text="First Name" />
-                        <TableColumn fx:id="dateOfBirth" minWidth="-1.0" prefWidth="350.0" text="Date of Birth" />
-                        <TableColumn fx:id="registrationNumber" minWidth="-1.0" prefWidth="200.0" text="Registration Number" />
+                        <TableColumn fx:id="dateOfBirth" minWidth="-1.0" prefWidth="376.0" text="Date of Birth" />
                     </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
                   </TableView>
                </content>
             </ScrollPane>
@@ -67,14 +103,14 @@
       </VBox>
    </center>
    <bottom>
-      <ButtonBar prefHeight="142.0" prefWidth="1280.0" BorderPane.alignment="CENTER">
+      <ButtonBar prefHeight="62.0" prefWidth="1280.0" BorderPane.alignment="CENTER">
         <buttons>
             <Button prefWidth="250.0" text="_View Students" wrapText="true" ButtonBar.buttonData="LEFT" />
             <Button fx:id="exitButton" cancelButton="true" onAction="#handleExitButton" prefWidth="250.0" text="E_xit" />
-          <Button minWidth="50.0" prefHeight="25.0" prefWidth="250.0" text="_Add Student" ButtonBar.buttonData="RIGHT" />
+          <Button minWidth="50.0" onAction="#addStudent" prefHeight="25.0" prefWidth="250.0" text="_Add Student" ButtonBar.buttonData="RIGHT" />
         </buttons>
          <padding>
-            <Insets bottom="45.0" left="40.0" right="40.0" />
+            <Insets bottom="30.0" left="40.0" right="40.0" top="30.0" />
          </padding>
       </ButtonBar>
    </bottom>
