--- a/src/com/barman/views/adminDashboard.fxml
+++ b/src/com/barman/views/adminDashboard.fxml
@@ -1,29 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="740.0" prefWidth="1280.0" stylesheets="@../css/adminDashboard.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.barman.controllers.AdminDashboard">
    <top>
-      <HBox spacing="30.0" style="-fx-background-color: yellow;" BorderPane.alignment="CENTER">
+      <HBox spacing="30.0" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="59.0" fitWidth="109.0" pickOnBounds="true" preserveRatio="true" HBox.hgrow="ALWAYS">
+            <ImageView fitHeight="59.0" fitWidth="91.0" pickOnBounds="true" preserveRatio="true" styleClass=".borderPane" HBox.hgrow="ALWAYS">
                <image>
                   <Image url="@../img/logo.PNG" />
                </image>
             </ImageView>
-            <Label maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="17.0" prefWidth="436.0" text="School Name Here" HBox.hgrow="ALWAYS" />
-            <Button maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" text="Logout" HBox.hgrow="ALWAYS" />
+            <Label maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="17.0" prefWidth="1143.0" text="School Name Here" HBox.hgrow="ALWAYS" />
+            <Button fx:id="logoutButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#handleLogoutButton" styleClass="logout-button" text="Logout" HBox.hgrow="ALWAYS">
+               <HBox.margin>
+                  <Insets top="30.0" />
+               </HBox.margin></Button>
          </children>
          <BorderPane.margin>
             <Insets />
@@ -31,52 +38,88 @@
       </HBox>
    </top>
    <center>
-      <VBox prefHeight="319.0" prefWidth="640.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="596.0" prefWidth="1231.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox prefHeight="57.0" prefWidth="635.0">
+            <HBox alignment="CENTER" prefHeight="13.0" prefWidth="1280.0" styleClass="w">
                <children>
-                  <Label prefHeight="17.0" prefWidth="216.0" text="Welcome Chima Stella" HBox.hgrow="ALWAYS" />
-                  <Label prefHeight="17.0" prefWidth="183.0" text="January 31st, 2019." HBox.hgrow="ALWAYS" />
+                  <Label fx:id="adminName" alignment="CENTER" prefHeight="17.0" prefWidth="576.0" styleClass="welcome-box" text="Welcome" HBox.hgrow="ALWAYS">
+                     <padding>
+                        <Insets bottom="10.0" top="10.0" />
+                     </padding>
+                     <HBox.margin>
+                        <Insets top="30.0" />
+                     </HBox.margin></Label>
+                  <Label fx:id="date" alignment="CENTER" prefHeight="17.0" prefWidth="811.0" styleClass="date" text="January 31st, 2019." HBox.hgrow="ALWAYS">
+                     <padding>
+                        <Insets bottom="10.0" top="10.0" />
+                     </padding>
+                     <HBox.margin>
+                        <Insets top="30.0" />
+                     </HBox.margin></Label>
                </children>
                <VBox.margin>
-                  <Insets bottom="30.0" />
+                  <Insets />
                </VBox.margin>
+            </HBox>
+            <Label alignment="CENTER" prefWidth="1280.0" text="Student List" VBox.vgrow="ALWAYS">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Label>
+            <HBox alignment="CENTER" spacing="40.0">
+               <children>
+                  <Label alignment="CENTER" prefHeight="17.0" prefWidth="209.0" text="Find Student" />
+                  <TextField id="textField" fx:id="searchBox" prefHeight="25.0" prefWidth="288.0" promptText="Search by name, number or date. eg. 30/05/1999" />
+                   <ComboBox fx:id="studentCategoryComboBox" onAction="#handleStudentCategoryComboBox" prefWidth="200.0" styleClass="button" value="None Selected">
+                       <items>
+                           <FXCollections fx:factory="observableArrayList">
+                               <String fx:value="None Selected" />
+                               <String fx:value="Registration Number" />
+                               <String fx:value="Name" />
+                               <String fx:value="First Name" />
+                               <String fx:value="Date of Birth" />
+                           </FXCollections>
+                       </items>
+                   </ComboBox>
+                   <ComboBox fx:id="moduleSpecialtyComboBox" onAction="#handleModuleSpecialtyComboBox" prefWidth="200.0" styleClass="button" value="None Selected">
+                       <items>
+                           <FXCollections fx:factory="observableArrayList">
+                               <String fx:value="None Selected" />
+                               <String fx:value="Module" />
+                               <String fx:value="Specialty" />
+                           </FXCollections>
+                       </items>
+                   </ComboBox>
+                  <Button mnemonicParsing="false" onAction="#handleFindStudent" prefWidth="100.0" styleClass="logout" text="Find Student" />
+               </children>
                <padding>
-                  <Insets bottom="20.0" top="20.0" />
+                  <Insets bottom="30.0" top="30.0" />
                </padding>
             </HBox>
-            <Separator prefWidth="200.0" />
-            <HBox spacing="10.0">
-               <children>
-                  <TextField prefWidth="200.0" promptText="Find Someone..." HBox.hgrow="ALWAYS" />
-                  <Label prefHeight="17.0" prefWidth="84.0" text="Find by:" />
-                  <ChoiceBox prefWidth="200.0" HBox.hgrow="ALWAYS" />
-                  <Button defaultButton="true" prefHeight="25.0" prefWidth="228.0" text="_Find Student" HBox.hgrow="ALWAYS" />
-               </children>
-               <VBox.margin>
-                  <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
-               </VBox.margin>
-            </HBox>
-            <Separator prefWidth="200.0" />
-            <HBox fillHeight="false" prefHeight="185.0" prefWidth="640.0">
-               <children>
-                  <Label prefHeight="175.0" prefWidth="360.0" text="Number of Students" HBox.hgrow="ALWAYS" />
-                  <Label prefHeight="177.0" prefWidth="320.0" text="Number of Professors" HBox.hgrow="ALWAYS" />
-               </children>
-            </HBox>
+            <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="401.0" prefViewportHeight="400.0" prefWidth="1123.0" VBox.vgrow="ALWAYS">
+               <content>
+                  <TableView fx:id="studentTable" editable="true" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="399.0" prefWidth="1316.0">
+                    <columns>
+                        <TableColumn fx:id="registrationNumber" minWidth="-1.0" prefWidth="200.0" styleClass="column" text="Registration Number" />
+                        <TableColumn fx:id="name" minWidth="-1.0" prefWidth="350.0" styleClass="column" text="Name" />
+                        <TableColumn fx:id="firstName" minWidth="-1.0" prefWidth="350.0" styleClass="column" text="First Name" />
+                        <TableColumn fx:id="dateOfBirth" minWidth="-1.0" prefWidth="376.0" styleClass="column" text="Date of Birth" />
+                    </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                  </TableView>
+               </content>
+            </ScrollPane>
          </children>
       </VBox>
    </center>
    <bottom>
-      <ButtonBar prefHeight="72.0" prefWidth="640.0" BorderPane.alignment="CENTER">
-        <buttons>
-            <Button prefWidth="250.0" text="_View Students" wrapText="true" ButtonBar.buttonData="LEFT" />
-            <Button cancelButton="true" prefWidth="250.0" text="E_xit" />
-          <Button minWidth="50.0" prefHeight="25.0" prefWidth="250.0" text="_Add Student" ButtonBar.buttonData="RIGHT" />
-        </buttons>
-         <padding>
-            <Insets left="40.0" right="40.0" />
-         </padding>
-      </ButtonBar>
+      <HBox alignment="CENTER" prefHeight="114.0" prefWidth="1280.0" spacing="200.0">
+         <children>
+            <Button fx:id="exitButton" onAction="#handleExitButton" prefWidth="250.0" text="E_xit" />
+          <Button minWidth="50.0" onAction="#addStudent" prefHeight="25.0" prefWidth="250.0" text="_Add Student" />
+         </children>
+      </HBox>
    </bottom>
 </BorderPane>
