--- a/src/com/barman/views/addStudentModal.fxml
+++ b/src/com/barman/views/addStudentModal.fxml
@@ -2,12 +2,15 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
+<?import javafx.collections.FXCollections?>
+<?import java.lang.String?>
 <VBox xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.barman.controllers.AddStudent">
    <children>
       <Label alignment="TOP_CENTER" prefHeight="17.0" prefWidth="602.0" text="Add Student">
@@ -28,6 +31,23 @@
          <children>
             <TextField fx:id="newStudentNumber" editable="false" prefWidth="250.0" promptText="Registration Number" />
             <DatePicker fx:id="newStudentDateOfBirth" editable="false" prefWidth="250.0" promptText="Date of Birth" showWeekNumbers="true" />
+         </children>
+         <padding>
+            <Insets bottom="20.0" top="20.0" />
+         </padding>
+      </HBox>
+      <HBox alignment="CENTER" spacing="20.0">
+         <children>
+            <ComboBox prefWidth="250.0" fx:id="specialtyComboBox" onAction="#handleSpecialityComboBox" value="Choose Specialty">
+               <items>
+                  <FXCollections fx:factory="observableArrayList">
+                     <String fx:value="Computer Science" />
+                     <String fx:value="Mathematics" />
+                     <String fx:value="Biology" />
+                  </FXCollections>
+               </items>
+            </ComboBox>
+            <ComboBox layoutX="10.0" layoutY="10.0" prefWidth="250.0" fx:id="sectorComboBox" value="Choose Sector" />
          </children>
          <padding>
             <Insets bottom="20.0" top="20.0" />
