--- a/src/com/barman/views/adminDashboard.fxml
+++ b/src/com/barman/views/adminDashboard.fxml
@@ -85,8 +85,8 @@
                        <items>
                            <FXCollections fx:factory="observableArrayList">
                                <String fx:value="None Selected" />
-                               <String fx:value="Module" />
                                <String fx:value="Specialty" />
+                               <String fx:value="Teacher" />
                            </FXCollections>
                        </items>
                    </ComboBox>
